--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">compass</string>
     <string name="Acc1">Accelerometer</string>
     <string name="Comp">Kompass</string>
+    <string name="text" >Degree </string>
     <string name="X">X</string>
     <string name="Heading">Heading: 0.0</string>
 
